--- a/Mentorierte_Arbeit_Induktion_Rekursion/titlepage.tex
+++ b/Mentorierte_Arbeit_Induktion_Rekursion/titlepage.tex
@@ -21,14 +21,14 @@
         \vfill
         {\Large Diese Unterlagen entstanden in den Jahren 2022 / 2023 im Rahmen einer \textit{Mentorierten Arbeit} im Lehrdiplom Informatik an der ETH Zürich.}
 
-        \noindent
-        Die aktuelle Version dieser Arbeit kann unter
-        \begin{center}
-            {\footnotesize
-                \url{https://github.com/ThomasGrafNumerics/EducationalMaterial/tree/main/Mentorierte_Arbeit_Induktion_Rekursion}
-            }
-        \end{center}
-        gefunden werden. Über inhaltliche Verbesserungsvorschläge (mittels pull requests oder per E-Mail an \href{mailto:thomas.graf.education@proton.me}{thomas.graf.education@proton.me}) freuen wir uns sehr!
+        % \noindent
+        % Die aktuelle Version dieser Arbeit kann unter
+        % \begin{center}
+        %     {\footnotesize
+        %         \url{https://github.com/ThomasGrafNumerics/EducationalMaterial/tree/main/Mentorierte_Arbeit_Induktion_Rekursion}
+        %     }
+        % \end{center}
+        % gefunden werden. Über inhaltliche Verbesserungsvorschläge (mittels pull requests oder per E-Mail an \href{mailto:thomas.graf.education@proton.me}{thomas.graf.education@proton.me}) freuen wir uns sehr!
         \vspace{0.8cm}
     \end{center}
 \end{titlepage}
